--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -1,36 +1,75 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-PT">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Painel do Utilizador</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Registar Instalação</title>
+  <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
-  <div class="background"></div>
+  <!-- Reutiliza o teu header/nav -->
+  <header>
+    <!-- ... -->
+  </header>
 
-  <div class="login-panel">
-    <h1>🌞 Painel do Utilizador</h1>
-    <p id="welcomeMessage">A carregar...</p>
-    <button onclick="logout()" class="btn login">Sair</button>
-  </div>
+  <main class="content">
+    <h1>Registar Instalação de Painéis Solares</h1>
+
+    <form id="installationForm" class="form-installation">
+      <label for="installDate">Data da Instalação</label>
+      <input type="date" id="installDate" name="installDate" required>
+
+      <label for="address">Morada</label>
+      <textarea id="address" name="address" rows="2" required></textarea>
+
+      <label for="panelCount">Número de Painéis</label>
+      <input type="number" id="panelCount" name="panelCount" min="1" required>
+
+      <label for="capacityKw">Potência (kW)</label>
+      <input type="number" id="capacityKw" name="capacityKw" step="0.01" min="0" required>
+
+      <button type="submit">Submeter</button>
+    </form>
+
+    <div id="message" class="form-message"></div>
+  </main>
 
   <script>
-    // Verifica se o token existe
-    const token = localStorage.getItem("token");
+  const API_URL = "http://localhost:3000"; // ajusta a porta se for diferente
 
-    if (!token) {
-      alert("Acesso negado! Faz login primeiro.");
-      window.location.href = "index.html";
-    } else {
-      document.getElementById("welcomeMessage").innerText = "Autenticado com sucesso!";
-    }
+  document.getElementById('installationForm').addEventListener('submit', async function(e) {
+    e.preventDefault();
 
-    function logout() {
-      localStorage.removeItem("token");
-      alert("Sessão terminada.");
-      window.location.href = "index.html";
+    const installDate  = document.getElementById('installDate').value;
+    const address      = document.getElementById('address').value.trim();
+    const panelCount   = parseInt(document.getElementById('panelCount').value, 10);
+    const capacityKw   = parseFloat(document.getElementById('capacityKw').value);
+    const token        = localStorage.getItem('token');
+
+    try {
+      const res = await fetch(`${API_URL}/api/installations`, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'Authorization': 'Bearer ' + token
+        },
+        body: JSON.stringify({ installDate, address, panelCount, capacityKw })
+      });
+
+      const data = await res.json();
+      const msgEl = document.getElementById('message');
+
+      if (res.ok) {
+        msgEl.textContent = '✅ ' + data.message;
+        this.reset();
+      } else {
+        msgEl.textContent = '⚠️ ' + (data.message || 'Erro ao registar instalação');
+      }
+    } catch (err) {
+      document.getElementById('message').textContent = '❌ Erro de rede.';
+      console.error(err);
     }
-  </script>
+  });
+</script>
+
 </body>
 </html>
