--- a/frontend/tech.html
+++ b/frontend/tech.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8" />
-  <title>Pesquisa de Instalações</title>
+  <title>Área do Técnico</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -34,5 +34,6 @@
       if(window.lucide) lucide.replace();
     });
   </script>
-  <script src="tecnico_pesquisa.js"></script>
+  <script src="tech.js"></script>
 </body>
+</html> 
