--- a/frontend/user.html
+++ b/frontend/user.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Registo de Instalação</title>
+  <title>Área do Usuário</title>
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <style>
@@ -94,6 +94,6 @@
       if(window.lucide) lucide.replace();
     });
   </script>
-  <script src="registo_instalacao.js"></script>
+  <script src="user.js"></script>
 </body>
-</html>
+</html> 
